# strlng

./: CMakeLists.txt  SYNTAX.md  debug.h  lexer.c  lexer.h  main.c  packages.h  strlng.h  token.c  token.h
examples/: complicated.str  test.str
functions/: fn.h  fn_list.h  fn_number.h  fn_prepro.h  fn_string.h
preprocessor/: instruction_parser.c  instruction_parser.h  lexer.c  lexer.h  package_loader.h  token.c  token.h
utils/: strutil.h
